// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DivKit Snapshot Tests Animated buttons with margins buttons with action_animation preserve margins 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <Pressable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "height": 48,
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
        }
      }
    >
      <Animated.View
        ref={null}
        style={
          {
            "flex": 1,
            "justifyContent": "flex-start",
            "transform": [
              {
                "scale": {
                  "_value": 1,
                  "interpolate": [MockFunction],
                  "setValue": [MockFunction],
                },
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={true}
          ref={null}
          style={
            {
              "color": "#000000",
              "fontSize": 12,
              "textAlign": "left",
            }
          }
        >
          Button 1
        </Text>
      </Animated.View>
    </Pressable>
    <Pressable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "height": 48,
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
        }
      }
    >
      <Animated.View
        ref={null}
        style={
          {
            "flex": 1,
            "justifyContent": "flex-start",
            "opacity": {
              "_value": 1,
              "interpolate": [MockFunction],
              "setValue": [MockFunction],
            },
          }
        }
      >
        <Text
          allowFontScaling={true}
          ref={null}
          style={
            {
              "color": "#000000",
              "fontSize": 12,
              "textAlign": "left",
            }
          }
        >
          Button 2
        </Text>
      </Animated.View>
    </Pressable>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Background and borders solid background with corner_radius 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "borderRadius": 16,
        "flexDirection": "column",
        "height": 100,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      }
    }
  >
    <View
      pointerEvents="none"
      ref={null}
      style={
        [
          undefined,
          {
            "borderRadius": 16,
          },
          {
            "overflow": "hidden",
            "zIndex": -1,
          },
        ]
      }
    >
      <View
        ref={null}
        style={
          [
            undefined,
            {
              "backgroundColor": "#FF0000",
            },
          ]
        }
      />
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Rounded red box
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Full JSON fixtures story.json renders correctly 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignItems": "flex-start",
          "alignSelf": "stretch",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <View
        pointerEvents="none"
        ref={null}
        style={
          [
            undefined,
            {},
            {
              "overflow": "hidden",
              "zIndex": -1,
            },
          ]
        }
      >
        <View
          ref={null}
          style={
            [
              undefined,
              {
                "backgroundColor": "#ffffff",
              },
            ]
          }
        />
      </View>
      <View
        ref={null}
        style={
          {
            "alignSelf": "stretch",
            "borderRadius": 22,
            "flexBasis": 0,
            "flexGrow": 67,
            "flexShrink": 1,
            "overflow": "hidden",
          }
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            }
          }
        >
          <Image
            onError={[Function]}
            onLoadEnd={[Function]}
            ref={null}
            resizeMode="cover"
            source={
              {
                "uri": "mock://images/story-cover",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            ref={null}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <ActivityIndicator
              color="#999999"
              ref={null}
              size="small"
            />
          </View>
        </View>
      </View>
      <View
        ref={null}
        style={
          {
            "alignItems": "flex-start",
            "alignSelf": "stretch",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 33,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          }
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "flex-start",
              "alignSelf": "stretch",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "marginBottom": 0,
              "marginLeft": 15,
              "marginRight": 15,
              "marginTop": 18,
            }
          }
        >
          <View
            ref={null}
            style={
              {
                "alignSelf": "flex-start",
                "justifyContent": "flex-start",
                "marginRight": 8,
              }
            }
          >
            <Text
              allowFontScaling={true}
              ref={null}
              style={
                {
                  "color": "#c99d66",
                  "fontSize": 16,
                  "textAlign": "left",
                }
              }
            >
              демо
            </Text>
          </View>
          <View
            ref={null}
            style={
              {
                "alignSelf": "flex-start",
                "height": 20,
                "width": 86,
              }
            }
          >
            <View
              ref={null}
              style={
                {
                  "alignItems": "flex-start",
                  "justifyContent": "flex-start",
                  "overflow": "hidden",
                }
              }
            >
              <Image
                onError={[Function]}
                onLoadEnd={[Function]}
                ref={null}
                resizeMode="contain"
                source={
                  {
                    "uri": "mock://images/story-badge",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              />
              <View
                ref={null}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  color="#999999"
                  ref={null}
                  size="small"
                />
              </View>
            </View>
          </View>
        </View>
        <View
          ref={null}
          style={
            {
              "alignSelf": "stretch",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "position": "relative",
            }
          }
        >
          <View
            ref={null}
            style={
              {
                "alignItems": "flex-start",
                "bottom": 0,
                "flexDirection": "column",
                "justifyContent": "flex-start",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              ref={null}
              style={
                {
                  "alignItems": "flex-start",
                  "alignSelf": "stretch",
                  "flexBasis": 0,
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "flex-start",
                  "marginLeft": 16,
                  "marginRight": 16,
                }
              }
            >
              <View
                ref={null}
                style={
                  {
                    "alignSelf": "flex-start",
                    "justifyContent": "flex-start",
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  ref={null}
                  style={
                    {
                      "color": "#000000",
                      "fontSize": 24,
                      "fontWeight": "700",
                      "textAlign": "left",
                    }
                  }
                >
                  Demo Place
                </Text>
              </View>
              <View
                ref={null}
                style={
                  {
                    "alignSelf": "center",
                    "justifyContent": "flex-start",
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  ref={null}
                  style={
                    {
                      "color": "#000000",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    }
                  }
                >
                  Это демонстрационный текст карточки.

Контент используется только для snapshot-тестов и не содержит бизнес-данных.
                </Text>
              </View>
            </View>
          </View>
          <View
            ref={null}
            style={
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "flexDirection": "column",
                "justifyContent": "flex-end",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Pressable
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              ref={null}
              style={
                {
                  "alignSelf": "flex-end",
                  "marginBottom": 15,
                  "marginRight": 15,
                }
              }
            >
              <Animated.View
                ref={null}
                style={
                  {
                    "alignItems": "flex-start",
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                    "opacity": {
                      "_value": 1,
                      "interpolate": [MockFunction],
                      "setValue": [MockFunction],
                    },
                  }
                }
              >
                <View
                  ref={null}
                  style={
                    {
                      "alignItems": "flex-end",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <View
                    ref={null}
                    style={
                      {
                        "alignSelf": "flex-end",
                        "height": 30,
                        "marginRight": 9,
                        "width": 30,
                      }
                    }
                  >
                    <View
                      ref={null}
                      style={
                        {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Image
                        onError={[Function]}
                        onLoadEnd={[Function]}
                        ref={null}
                        resizeMode="cover"
                        source={
                          {
                            "uri": "mock://images/map-icon",
                          }
                        }
                        style={
                          {
                            "height": "100%",
                            "width": "100%",
                          }
                        }
                      />
                      <View
                        ref={null}
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "bottom": 0,
                            "justifyContent": "center",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                        }
                      >
                        <ActivityIndicator
                          color="#999999"
                          ref={null}
                          size="small"
                        />
                      </View>
                    </View>
                  </View>
                  <View
                    ref={null}
                    style={
                      {
                        "alignItems": "flex-start",
                        "alignSelf": "flex-end",
                        "flexDirection": "column",
                        "justifyContent": "flex-start",
                      }
                    }
                  >
                    <View
                      ref={null}
                      style={
                        {
                          "alignSelf": "flex-start",
                          "justifyContent": "flex-start",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={true}
                        ref={null}
                        style={
                          {
                            "color": "#1e9bfe",
                            "fontSize": 16,
                            "fontWeight": "700",
                            "textAlign": "left",
                          }
                        }
                      >
                        Demo Maps
                      </Text>
                    </View>
                    <View
                      ref={null}
                      style={
                        {
                          "alignSelf": "flex-start",
                          "justifyContent": "flex-start",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={true}
                        ref={null}
                        style={
                          {
                            "color": "#1e9bfe",
                            "fontSize": 11,
                            "fontWeight": "400",
                            "textAlign": "left",
                          }
                        }
                      >
                        mock://maps
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  ref={null}
                  style={
                    {
                      "alignItems": "flex-start",
                      "alignSelf": "stretch",
                      "flexDirection": "column",
                      "height": 1,
                      "justifyContent": "flex-start",
                      "marginTop": 4,
                    }
                  }
                >
                  <View
                    pointerEvents="none"
                    ref={null}
                    style={
                      [
                        undefined,
                        {},
                        {
                          "overflow": "hidden",
                          "zIndex": -1,
                        },
                      ]
                    }
                  >
                    <View
                      ref={null}
                      style={
                        [
                          undefined,
                          {
                            "backgroundColor": "#1E9BFE",
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </Animated.View>
            </Pressable>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Full JSON fixtures tap-animations.json renders correctly 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginBottom": 24,
        "marginTop": 24,
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
          "paddingBottom": 16,
          "paddingLeft": 24,
          "paddingRight": 24,
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 20,
            "fontWeight": "700",
            "lineHeight": 24,
            "textAlign": "left",
          }
        }
      >
        Tap animations
      </Text>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
          "marginBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 15,
            "lineHeight": 20,
            "textAlign": "left",
          }
        }
      >
        If a div has at least one tap action specified, you can set a tap animation.

Fade, scale, and a combination of fade and scale animations are supported.
      </Text>
    </View>
    <Pressable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "height": 48,
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
        }
      }
    >
      <Animated.View
        ref={null}
        style={
          {
            "borderRadius": 16,
            "flex": 1,
            "justifyContent": "center",
            "opacity": {
              "_value": 1,
              "interpolate": [MockFunction],
              "setValue": [MockFunction],
            },
            "overflow": "hidden",
          }
        }
      >
        <View
          pointerEvents="none"
          ref={null}
          style={
            [
              undefined,
              {
                "borderRadius": 16,
              },
              {
                "overflow": "hidden",
                "zIndex": -1,
              },
            ]
          }
        >
          <View
            ref={null}
            style={
              [
                undefined,
                {
                  "backgroundColor": "#00B341",
                },
              ]
            }
          />
        </View>
        <Text
          allowFontScaling={true}
          ref={null}
          style={
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
              "textAlign": "center",
            }
          }
        >
          Fade
        </Text>
      </Animated.View>
    </Pressable>
    <Pressable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "height": 48,
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
        }
      }
    >
      <Animated.View
        ref={null}
        style={
          {
            "borderRadius": 16,
            "flex": 1,
            "justifyContent": "center",
            "overflow": "hidden",
            "transform": [
              {
                "scale": {
                  "_value": 1,
                  "interpolate": [MockFunction],
                  "setValue": [MockFunction],
                },
              },
            ],
          }
        }
      >
        <View
          pointerEvents="none"
          ref={null}
          style={
            [
              undefined,
              {
                "borderRadius": 16,
              },
              {
                "overflow": "hidden",
                "zIndex": -1,
              },
            ]
          }
        >
          <View
            ref={null}
            style={
              [
                undefined,
                {
                  "backgroundColor": "#0077FF",
                },
              ]
            }
          />
        </View>
        <Text
          allowFontScaling={true}
          ref={null}
          style={
            {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "textAlign": "center",
            }
          }
        >
          Scale
        </Text>
      </Animated.View>
    </Pressable>
    <Pressable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "height": 48,
          "marginBottom": 16,
          "marginLeft": 16,
          "marginRight": 16,
        }
      }
    >
      <Animated.View
        ref={null}
        style={
          {
            "borderRadius": 16,
            "flex": 1,
            "justifyContent": "center",
            "opacity": {
              "_value": 1,
              "interpolate": [MockFunction],
              "setValue": [MockFunction],
            },
            "overflow": "hidden",
            "transform": [
              {
                "scale": {
                  "_value": 1,
                  "interpolate": [MockFunction],
                  "setValue": [MockFunction],
                },
              },
            ],
          }
        }
      >
        <View
          pointerEvents="none"
          ref={null}
          style={
            [
              undefined,
              {
                "borderRadius": 16,
              },
              {
                "overflow": "hidden",
                "zIndex": -1,
              },
            ]
          }
        >
          <View
            ref={null}
            style={
              [
                undefined,
                {
                  "backgroundColor": "#FFCC00",
                },
              ]
            }
          />
        </View>
        <Text
          allowFontScaling={true}
          ref={null}
          style={
            {
              "color": "#000000",
              "fontSize": 14,
              "fontWeight": "500",
              "textAlign": "center",
            }
          }
        >
          Set
        </Text>
      </Animated.View>
    </Pressable>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Full JSON fixtures widget.json (overlap template) renders correctly 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <Pressable
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": 16,
          "marginRight": 16,
          "maxHeight": 300,
          "minHeight": 10,
        }
      }
    >
      <Animated.View
        ref={null}
        style={
          {
            "borderRadius": 22,
            "flex": 1,
            "overflow": "hidden",
            "position": "relative",
            "transform": [
              {
                "scale": {
                  "_value": 1,
                  "interpolate": [MockFunction],
                  "setValue": [MockFunction],
                },
              },
            ],
          }
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            ref={null}
            style={
              {
                "alignSelf": "stretch",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              }
            }
          >
            <View
              ref={null}
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
            >
              <Image
                onError={[Function]}
                onLoadEnd={[Function]}
                ref={null}
                resizeMode="cover"
                source={
                  {
                    "uri": "mock://images/widget-cover",
                  }
                }
                style={
                  {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              />
              <View
                ref={null}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <ActivityIndicator
                  color="#999999"
                  ref={null}
                  size="small"
                />
              </View>
            </View>
          </View>
        </View>
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "flexDirection": "column",
              "justifyContent": "flex-start",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            ref={null}
            style={
              {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              ref={null}
              style={
                {
                  "alignSelf": "flex-start",
                  "justifyContent": "flex-start",
                  "marginLeft": 18,
                  "marginTop": 14,
                }
              }
            >
              <Text
                allowFontScaling={true}
                ref={null}
                style={
                  {
                    "color": "#ffffff",
                    "fontSize": 16,
                    "fontWeight": "500",
                    "textAlign": "left",
                  }
                }
              >
                Демо подборка мест
              </Text>
            </View>
            <View
              ref={null}
              style={
                {
                  "alignSelf": "flex-start",
                  "height": 25,
                  "marginLeft": 12,
                  "marginRight": 12,
                  "marginTop": 12,
                  "width": 104,
                }
              }
            >
              <View
                ref={null}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
              >
                <Image
                  onError={[Function]}
                  onLoadEnd={[Function]}
                  ref={null}
                  resizeMode="cover"
                  source={
                    {
                      "uri": "mock://images/widget-badge",
                    }
                  }
                  style={
                    {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                />
                <View
                  ref={null}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <ActivityIndicator
                    color="#999999"
                    ref={null}
                    size="small"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </Animated.View>
    </Pressable>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Horizontal container alignment content_alignment_horizontal: center + content_alignment_vertical: bottom 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-end",
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "height": 100,
        "justifyContent": "center",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "flex-end",
          "height": 30,
          "width": 30,
        }
      }
    >
      <View
        ref={null}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "overflow": "hidden",
          }
        }
      >
        <Image
          onError={[Function]}
          onLoadEnd={[Function]}
          ref={null}
          resizeMode="cover"
          source={
            {
              "uri": "https://example.com/img.png",
            }
          }
          style={
            {
              "height": "100%",
              "width": "100%",
            }
          }
        />
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <ActivityIndicator
            color="#999999"
            ref={null}
            size="small"
          />
        </View>
      </View>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "flex-end",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Label
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Horizontal container alignment content_alignment_horizontal: space-between 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "flex-start",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Left
      </Text>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "flex-start",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Right
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Horizontal container alignment content_alignment_vertical: bottom aligns children to bottom 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-end",
        "alignSelf": "stretch",
        "flexDirection": "row",
        "height": 100,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "flex-end",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Bottom-aligned
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Overlap container child alignment_horizontal: right, alignment_vertical: bottom 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "stretch",
        "height": 200,
        "position": "relative",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignItems": "flex-end",
          "bottom": 0,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        ref={null}
        style={
          {
            "alignItems": "flex-start",
            "alignSelf": "flex-end",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          }
        }
      >
        <View
          ref={null}
          style={
            {
              "alignSelf": "stretch",
              "justifyContent": "flex-start",
            }
          }
        >
          <Text
            allowFontScaling={true}
            ref={null}
            style={
              {
                "color": "#000000",
                "fontSize": 12,
                "textAlign": "left",
              }
            }
          >
            Bottom-right
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Overlap container match_parent children fill parent 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "stretch",
        "height": 300,
        "position": "relative",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignItems": "flex-start",
          "bottom": 0,
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        ref={null}
        style={
          {
            "alignSelf": "stretch",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <View
          ref={null}
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "overflow": "hidden",
            }
          }
        >
          <Image
            onError={[Function]}
            onLoadEnd={[Function]}
            ref={null}
            resizeMode="cover"
            source={
              {
                "uri": "https://example.com/bg.png",
              }
            }
            style={
              {
                "height": "100%",
                "width": "100%",
              }
            }
          />
          <View
            ref={null}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <ActivityIndicator
              color="#999999"
              ref={null}
              size="small"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      ref={null}
      style={
        {
          "alignItems": "center",
          "bottom": 0,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        ref={null}
        style={
          {
            "alignSelf": "center",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={true}
          ref={null}
          style={
            {
              "color": "#000000",
              "fontSize": 12,
              "textAlign": "left",
            }
          }
        >
          Overlay text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Sizing combinations fixed width and height 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "flex-start",
        "height": 50,
        "justifyContent": "flex-start",
        "width": 100,
      }
    }
  >
    <Text
      allowFontScaling={true}
      ref={null}
      style={
        {
          "color": "#000000",
          "fontSize": 12,
          "textAlign": "left",
        }
      }
    >
      Fixed
    </Text>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Sizing combinations match_parent with min/max size 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
          "maxHeight": 150,
          "maxWidth": 300,
          "minHeight": 50,
          "minWidth": 100,
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Constrained match_parent
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Sizing combinations match_parent with weight in vertical container 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Top (weight 1)
      </Text>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "flexBasis": 0,
          "flexGrow": 2,
          "flexShrink": 1,
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Bottom (weight 2)
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Sizing combinations wrap_content with min/max constraints 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignSelf": "flex-start",
        "justifyContent": "flex-start",
        "maxWidth": 200,
        "minWidth": 50,
      }
    }
  >
    <Text
      allowFontScaling={true}
      ref={null}
      style={
        {
          "color": "#000000",
          "fontSize": 12,
          "textAlign": "left",
        }
      }
    >
      Constrained
    </Text>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Vertical container alignment content_alignment_horizontal: center 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "column",
        "height": 200,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "center",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Centered
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Vertical container alignment content_alignment_vertical: bottom 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexDirection": "column",
        "height": 200,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "flex-start",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Bottom
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Visibility gone hides element completely 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Visible
      </Text>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Also visible
      </Text>
    </View>
  </View>
</View>
`;

exports[`DivKit Snapshot Tests Visibility invisible takes space but not visible 1`] = `
<View
  ref={null}
>
  <View
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "alignSelf": "stretch",
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Visible
      </Text>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
          "opacity": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Invisible
      </Text>
    </View>
    <View
      ref={null}
      style={
        {
          "alignSelf": "stretch",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        allowFontScaling={true}
        ref={null}
        style={
          {
            "color": "#000000",
            "fontSize": 12,
            "textAlign": "left",
          }
        }
      >
        Also visible
      </Text>
    </View>
  </View>
</View>
`;
